--- a/resources/css/assets/css/custom.css
+++ b/resources/css/assets/css/custom.css
@@ -1,4 +1,33 @@
-html, body {
+html, body 
+{
   font-family: "Playfair Display", serif;
   font-optical-sizing: auto;
+}
+
+#home 
+{
+  padding-top: 50px;
+  padding-bottom: 50px;
+  height: auto;
+}
+
+#home .container .card
+{
+  border-radius: 14px;
+  border-top: 7px solid rgb(126 255 159);
+  padding: 20px;
+  cursor: pointer;
+}
+
+#home .card .badge 
+{
+  border-radius: 16px;
+  padding: 5px 12px;
+}
+
+.custom-btn
+{
+  background-color:  rgb(0, 146, 37) !important;
+  text-transform: capitalize;
+  border-radius: 12px !important;
 }
